@@ -2,7 +2,6 @@ package pt.ulisboa.depchain.server;
 
 import java.net.InetAddress;
 import java.net.InetSocketAddress;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.security.PrivateKey;
 import java.security.PublicKey;
@@ -10,9 +9,15 @@ import java.util.Map;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
+import com.weavechain.curve25519.Scalar;
+
+import pt.ulisboa.depchain.server.consensus.Message;
+import pt.ulisboa.depchain.server.consensus.Replica;
 import pt.ulisboa.depchain.shared.config.ConfigParser;
 import pt.ulisboa.depchain.shared.keys.PrivateKeyLoader;
 import pt.ulisboa.depchain.shared.keys.PublicKeyLoader;
+import pt.ulisboa.depchain.shared.logging.Logger;
+import pt.ulisboa.depchain.shared.model.ClientRequest;
 import pt.ulisboa.depchain.shared.network.dpch.Dpch;
 import pt.ulisboa.depchain.shared.network.links.authenticated.AuthenticatedLink;
 import pt.ulisboa.depchain.shared.network.model.ConnectionKey;
@@ -20,6 +25,8 @@ import pt.ulisboa.depchain.shared.network.model.InboundPacket;
 import pt.ulisboa.depchain.shared.utils.SerializationUtil;
 
 public final class DpchServer {
+  private static final Logger logger = new Logger("DpchServer");
+
   private final ConfigParser configParser;
   private final ConfigParser.ReplicaSection replicaConfig;
   private final PrivateKey localStaticSKey;
@@ -29,33 +36,39 @@ public final class DpchServer {
   public DpchServer(String serverId, String configPath) throws Exception {
     this.configParser = ConfigParser.load(Path.of(configPath));
     this.replicaConfig = configParser.requireReplica(serverId);
-    this.replica = new Replica(Math.toIntExact(replicaConfig.senderId()), configParser.system().n(), configParser);
     this.localStaticSKey = PrivateKeyLoader.loadReplicaPrivateKey(configParser, replicaConfig.senderId());
     this.staticPKeys = PublicKeyLoader.loadStaticPublicKeys(configParser);
+    byte[] thresholdPublicKey = PublicKeyLoader.loadReplicaThresholdPublicKey(configParser, replicaConfig.senderId());
+    Scalar share = PrivateKeyLoader.loadReplicaThresholdPrivateShare(configParser, replicaConfig.senderId());
+    PublicKey clientPublicKey = staticPKeys.get(configParser.client().senderId());
+    this.replica = new Replica(Math.toIntExact(replicaConfig.senderId()), configParser, share, thresholdPublicKey, clientPublicKey);
   }
 
   public void run() throws Exception {
     InetSocketAddress clientBindEndpoint = new InetSocketAddress(InetAddress.getByName(replicaConfig.host()), replicaConfig.clientPort());
     InetSocketAddress nodeBindEndpoint = new InetSocketAddress(InetAddress.getByName(replicaConfig.host()), replicaConfig.consensusPort());
-    ExecutorService workers = Executors.newCachedThreadPool();
+    ExecutorService workers = Executors.newVirtualThreadPerTaskExecutor();
 
     try (workers;
         AuthenticatedLink clientTransport = AuthenticatedLink.bind(clientBindEndpoint, replicaConfig.senderId(), localStaticSKey, staticPKeys);
-        AuthenticatedLink nodeListener = AuthenticatedLink.bind(nodeBindEndpoint, replicaConfig.senderId(), localStaticSKey, staticPKeys); // Bind for receiving
-        AuthenticatedLink nodeTransport = AuthenticatedLink.unbound(replicaConfig.senderId(), localStaticSKey, staticPKeys)) { // Unbound for sending
+        AuthenticatedLink nodeTransport = AuthenticatedLink.bind(nodeBindEndpoint, replicaConfig.senderId(), localStaticSKey, staticPKeys)) {
 
-      System.out.printf("Replica %s client listener: %s:%d%n", replicaConfig.id(), replicaConfig.host(), replicaConfig.clientPort());
-      System.out.printf("Replica %s node listener: %s:%d%n", replicaConfig.id(), replicaConfig.host(), replicaConfig.consensusPort());
+      logger.info("Replica " + replicaConfig.id() + " client listener: " + replicaConfig.host() + ":" + replicaConfig.clientPort());
+      logger.info("Replica " + replicaConfig.id() + " node listener: " + replicaConfig.host() + ":" + replicaConfig.consensusPort());
 
+      // Set up the replica with the transports and start the hotstuff loop
       this.replica.initNetwork(nodeTransport, clientTransport);
-      this.replica.initCrypto(localStaticSKey, staticPKeys);
-
       workers.submit(() -> this.replica.run());
-      workers.submit(() -> runNodeLoop(nodeListener, nodeTransport, workers));
+
+      // New thread for handling messages from other replicas
+      workers.submit(() -> runNodeLoop(nodeTransport, workers));
+
+      // This thread will handle client requests
       runClientLoop(clientTransport, workers);
     }
   }
 
+  // Loop for handling messages from clients
   private void runClientLoop(AuthenticatedLink transport, ExecutorService workers) {
     while (true) {
       InboundPacket request = receiveNextInbound(transport);
@@ -67,17 +80,19 @@ public final class DpchServer {
     }
   }
 
-  private void runNodeLoop(AuthenticatedLink listener, AuthenticatedLink transport, ExecutorService workers) {
+  // Loop for handling messages from other replicas
+  private void runNodeLoop(AuthenticatedLink transport, ExecutorService workers) {
     while (true) {
-      InboundPacket request = receiveNextInbound(listener);
+      InboundPacket request = receiveNextInbound(transport);
       if (request == null) {
         continue;
       }
 
-      workers.submit(() -> handleNodeRequest(listener, transport, request.packet(), request.sender()));
+      workers.submit(() -> handleNodeRequest(transport, request.packet(), request.sender()));
     }
   }
 
+  // Receives the next inbound packet
   private InboundPacket receiveNextInbound(AuthenticatedLink transport) {
     try {
       return transport.receive();
@@ -87,27 +102,28 @@ public final class DpchServer {
     }
   }
 
+  // Handles messages from clients
   private void handleClientRequest(AuthenticatedLink transport, Dpch inbound, InetSocketAddress sender) {
     String senderText = sender.getAddress().getHostAddress() + ":" + sender.getPort();
-    System.out.printf("Client request from %s%n", sender);
+    logger.info("Client request from " + sender);
 
     try {
-      String requestText = new String(inbound.payload(), StandardCharsets.UTF_8);
+      ClientRequest request = SerializationUtil.decodeClientRequestBytes(inbound.payload());
       ConnectionKey key = new ConnectionKey(sender, inbound.connectionId());
-      this.replica.receiveCommand(requestText, key);
-      // TODO: Optionally, send to the client "Request received and being processed";
+      this.replica.receiveClientCommand(request, key);
 
     } catch (RuntimeException exception) {
-      System.out.printf("Client request error from %s: %s%n", senderText, exception.getMessage());
+      logger.error("Client request error from " + senderText + ": " + exception.getMessage());
     }
   }
 
-  private void handleNodeRequest(AuthenticatedLink listener, AuthenticatedLink transport, Dpch inbound, InetSocketAddress sender) {
+  // Handles messages from other replicas
+  private void handleNodeRequest(AuthenticatedLink transport, Dpch inbound, InetSocketAddress sender) {
     try {
-      Message msg = SerializationUtil.decodeMessage(inbound.payload());
+      Message msg = SerializationUtil.decodeReplicaMessage(inbound.payload());
       this.replica.receiveMessage(msg);
     } catch (Exception e) {
-      System.err.printf("Error handling node message from %s: %s%n", sender, e.getMessage());
+      logger.error("Error handling node message from " + sender + ": " + e.getMessage());
     }
   }
 }
